Export a robot type definition: * Added server-side generator * Added UI to Angular client * Changed to a custom type for logging templates

--- a/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
+++ b/Clients/Angular/src/app/components/robot-types-list/robot-types-list.component.html
@@ -66,7 +66,7 @@
                         <button mat-menu-item [disabled]="selection.selected.length != 1"
                             (click)="exportLogs()">Logs</button>
                         <button mat-menu-item [disabled]="selection.selected.length != 1"
-                            (click)="exportPackage()">Package</button>
+                            (click)="exportDefinition()">Definition</button>
                     </mat-menu>
                 </div>
             </div>
