--- a/Clients/Angular/src/app/components/robot-import-dialog/robot-import-dialog.component.html
+++ b/Clients/Angular/src/app/components/robot-import-dialog/robot-import-dialog.component.html
@@ -42,7 +42,7 @@
                         </ng-container>
                         <ng-container matColumnDef="message">
                             <th mat-header-cell *matHeaderCellDef> </th>
-                            <td mat-cell *matCellDef="let record"> {{record.message}} </td>
+                            <td mat-cell *matCellDef="let record"> {{record.parse?.message}} </td>
                         </ng-container>
                         <ng-container matColumnDef="select">
                             <th mat-header-cell *matHeaderCellDef>
