--- a/Clients/Angular/src/app/components/robot-type-definition-import/robot-type-definition-import.component.html
+++ b/Clients/Angular/src/app/components/robot-type-definition-import/robot-type-definition-import.component.html
@@ -22,7 +22,7 @@
         <mat-step label="Verify Data" [stepControl]="controlVerification">
             <div class="panel-content">
                 <div class="definition-outline">
-                    <div *ngIf="definition?.parse?.details?.duplicate">
+                    <div *ngIf="isDuplicate">
                         <mat-icon>difference</mat-icon> This robot type already exists: importing will overwrite the existing definition.
                     </div>
                     <div *ngIf="definition?.parse?.message">
@@ -77,7 +77,7 @@
         <mat-step label="Import Robot Type">
             <div class="panel-content">
                 <div *ngIf="!isImporting">
-                    <div *ngIf="definition?.parse?.details?.duplicate">
+                    <div *ngIf="isDuplicate">
                         <mat-icon>difference</mat-icon> This robot type already exists: importing will overwrite the existing definition.
                     </div>
                     <div>
