Fixed issue with Angular material migration

--- a/Clients/Angular/src/app/components/login/login.component.html
+++ b/Clients/Angular/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <mat-card appearance="outlined">
+    <mat-card appearance="outlined" class="login-panel">
         <mat-card-header>
             <div mat-card-avatar class="app-icon"></div>
             <mat-card-title>Login</mat-card-title>
