--- a/Clients/Angular/src/app/components/login/login.component.scss
+++ b/Clients/Angular/src/app/components/login/login.component.scss
@@ -1,8 +1,6 @@
-
-/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
-mat-card {
+.login-panel {
     max-width: 400px;
-    margin: 6rem auto;
+    margin: 6rem auto 1rem;
 }
 
 mat-form-field {
