Added UI for QR code scanning

--- a/Clients/Angular/src/app/components/login/login.component.html
+++ b/Clients/Angular/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <mat-card appearance="outlined">
+<mat-card appearance="outlined">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <mat-card-header>
             <div mat-card-avatar class="app-icon"></div>
             <mat-card-title>Login</mat-card-title>
@@ -40,5 +40,6 @@
                 </span>
             </div>
         </mat-card-actions>
-    </mat-card>
-</form>
+    </form>
+</mat-card>
+<app-qrcode-reader></app-qrcode-reader>
