Generate a QR code for a student on the server

--- a/Clients/Angular/src/app/components/students-list/students-list.component.html
+++ b/Clients/Angular/src/app/components/students-list/students-list.component.html
@@ -45,6 +45,8 @@
                             (click)="exportDetails()">Details</button>
                         <button mat-menu-item [disabled]="selection.selected.length != 1"
                             (click)="exportLogs()">Logs</button>
+                        <button mat-menu-item [disabled]="selection.selected.length != 1"
+                            (click)="exportQRCode()">QR Code Login</button>
                         <!-- <button mat-menu-item [disabled]="selection.selected.length != 1" (click)="exportSnapshots()">Snapshots</button> -->
                     </mat-menu>
                 </div>
