--- a/Clients/Angular/src/app/components/user-import-dialog/user-import-dialog.component.html
+++ b/Clients/Angular/src/app/components/user-import-dialog/user-import-dialog.component.html
@@ -62,7 +62,7 @@
                         </ng-container>
                         <ng-container matColumnDef="message">
                             <th mat-header-cell *matHeaderCellDef> </th>
-                            <td mat-cell *matCellDef="let record"> {{record.message}} </td>
+                            <td mat-cell *matCellDef="let record"> {{record.parse.message}} </td>
                         </ng-container>
                         <ng-container matColumnDef="select">
                             <th mat-header-cell *matHeaderCellDef>
@@ -75,7 +75,7 @@
                             <td mat-cell *matCellDef="let row">
                                 <mat-checkbox (click)="$event.stopPropagation()"
                                     (change)="$event ? selection.toggle(row) : null"
-                                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                                    [checked]="selection.isSelected(row) && row.parse.details.canImport" [aria-label]="checkboxLabel(row)">
                                 </mat-checkbox>
                             </td>
                         </ng-container>
