Added current user name to student home

--- a/Clients/Angular/src/app/components/student-home/student-home.component.html
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.html
@@ -23,6 +23,9 @@
                 <mat-icon matListIcon aria-label="Save current program">publish</mat-icon> Save
             </button>
         </mat-action-list>
+        <div class="current-user-name">
+            {{currentUser?.name}}
+        </div>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
