--- a/Clients/Angular/src/app/components/login/login.component.html
+++ b/Clients/Angular/src/app/components/login/login.component.html
@@ -42,4 +42,4 @@
         </mat-card-actions>
     </form>
 </mat-card>
-<app-qrcode-reader (onKeyFound)="attemptQRLogin($event)"></app-qrcode-reader>
+<app-qrcode-reader (onKeyFound)="attemptQRLogin($event)" *ngIf="showQRCodes"></app-qrcode-reader>
