Implemented quick link for robot editor

--- a/Clients/Angular/src/app/components/robot-quick-links/robot-quick-links.component.html
+++ b/Clients/Angular/src/app/components/robot-quick-links/robot-quick-links.component.html
@@ -34,7 +34,7 @@
     <mat-card appearance="outlined">
         <mat-card-content>
             <img [src]="imageUrl" class="link-view" />
-            <a [href]="quickLinkUrl" class="link-preview" target="quick-link-preview">{{quickLinkUrl}}</a>
+            <a [href]="quickLinkUrl" class="link-preview" target="_blank">{{quickLinkUrl}}</a>
         </mat-card-content>
     </mat-card>
 </form>
