More work for synchronization: * Add source to command logs * Added a rehydration command to execution engine * Added the infrastructure to run hosted services

--- a/Server/NaoBlocks.Engine/WaterContracts.tt
+++ b/Server/NaoBlocks.Engine/WaterContracts.tt
@@ -18,7 +18,8 @@ var contracts = new[] {
     "mn:MachineName",
     "n:Name",
     "rtn:RobotTypeName",
-    "s:Salt",
+    "s:Source",
+    "sa:Salt",
     "si:SourceId",
     "smt:SourceMessageType",
     "sn:SourceName",
