--- a/Clients/Angular/src/app/components/named-value-editor/named-value-editor.component.html
+++ b/Clients/Angular/src/app/components/named-value-editor/named-value-editor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="editor lower-3" (ngSubmit)="doSave()">
+<form [formGroup]="form" class="editor lower-3">
   <h1 mat-dialog-title>
     {{data.title}}
   </h1>
