created a template for yolo detection editor

--- a/Clients/Angular/src/app/components/student-home/student-home.component.html
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.html
@@ -95,6 +95,12 @@
                     [controller]="controller"></app-blockly-editor>
                 <app-tangible-editor *ngSwitchCase="'tangibles'" [editorSettings]="editorSettings"
                     [controller]="controller"></app-tangible-editor>
+                <app-yolo-editor *ngSwitchCase="'yolo'" [editorSettings]="editorSettings"
+                    [controller]="controller"></app-yolo-editor>
+                
+                    
+
+
             </div>
             <app-settings-debug *ngSwitchCase="'debug-settings'" (closed)="onSettingsClosed($event)"
                 [settings]="runSettings"></app-settings-debug>
