add webcam to page

--- a/Clients/Angular/src/app/components/yolo-editor/yolo-editor.component.html
+++ b/Clients/Angular/src/app/components/yolo-editor/yolo-editor.component.html
@@ -1,3 +1,7 @@
 <div class="yolo-editor-container">
     <h2>Welcome to Yolo Editor!</h2>
+    <div>
+        <video #videoElement id="video" autoplay></video>
+        <canvas #videoCanvas></canvas>
+      </div>
 </div>
