install tensorflow and initialised yolo model

--- a/Clients/Angular/src/app/components/yolo-editor/yolo-editor.component.html
+++ b/Clients/Angular/src/app/components/yolo-editor/yolo-editor.component.html
@@ -1,7 +1,6 @@
-<div class="yolo-editor-container">
-    <h2>Welcome to Yolo Editor!</h2>
+<div class="yolo-editor-container" >
     <div>
-        <video #videoElement id="video" autoplay></video>
-        <canvas #videoCanvas></canvas>
+        <video #videoElement class="video-element" width="640" height="480" autoplay></video>
+        <canvas #videoCanvas class="video-canvas" width="640" height="480"></canvas>
       </div>
 </div>
