--- a/Clients/Angular/src/app/components/yolo-editor/yolo-editor.component.scss
+++ b/Clients/Angular/src/app/components/yolo-editor/yolo-editor.component.scss
@@ -1,4 +1,9 @@
 .yolo-editor-container {
-    padding: 16px;
+    display: flex;
     text-align: center;
+
+    .video-element {
+        margin: 0.5rem;
+        border: 1px solid #000;
+    }
 }
